<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_create_credentials_text_view_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_create_credentials_text_view_1_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_create_credentials_text_view_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dialog_create_credentials_text_view_2_text"
        app:layout_constraintLeft_toLeftOf="@id/dialog_create_credentials_text_view_1"
        app:layout_constraintTop_toBottomOf="@+id/dialog_create_credentials_text_view_1" />

    <TextView
        android:id="@+id/dialog_create_credentials_text_view_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dialog_create_credentials_text_view_3_text"
        app:layout_constraintLeft_toLeftOf="@id/dialog_create_credentials_text_view_1"
        app:layout_constraintTop_toBottomOf="@+id/dialog_create_credentials_text_view_2" />
</androidx.constraintlayout.widget.ConstraintLayout>