<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_menu_button_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/fragment_menu_button_account_text"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_baseline_account_circle_24"
        app:iconGravity="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_menu_button_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/fragment_menu_button_setting_text"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_baseline_settings_24"
        app:iconGravity="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_menu_button_account" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_menu_button_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/fragment_menu_button_logout_text"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_baseline_logout_24"
        app:iconGravity="end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_menu_button_setting" />
</androidx.constraintlayout.widget.ConstraintLayout>