<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_account_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewAccountActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activity_view_account_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/cardview_shadow_start_color"
        app:strokeWidth="4dp">

        <ImageView
            android:id="@+id/activity_view_account_image_view_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/none" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_view_account_text_input_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_view_account_text_input_layout_username_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_view_account_card_view"
        app:startIconDrawable="@drawable/ic_baseline_flutter_dash_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_view_account_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_view_account_text_input_layout_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_user_text_input_layout_dob_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_view_account_text_input_layout_username"
        app:startIconDrawable="@drawable/ic_baseline_cake_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_view_account_edit_text_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_view_account_text_input_layout_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_user_text_input_layout_bio_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_view_account_text_input_layout_dob"
        app:startIconDrawable="@drawable/ic_baseline_smart_toy_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_view_account_edit_text_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_view_account_button_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/activity_view_account_button_chat_text"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>