<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activity_user_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/cardview_shadow_start_color"
        app:strokeWidth="4dp">

        <ImageView
            android:id="@+id/activity_user_image_view_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/none" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_user_button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintLeft_toRightOf="@id/activity_user_card_view"
        app:layout_constraintTop_toTopOf="@id/activity_user_card_view"
        app:tint="@color/design_default_color_on_primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_user_button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_image_24"
        android:visibility="invisible"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/activity_user_card_view"
        app:layout_constraintLeft_toRightOf="@id/activity_user_card_view"
        app:tint="@color/design_default_color_on_primary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_user_text_input_layout_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_user_text_input_layout_username_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_user_card_view"
        app:startIconDrawable="@drawable/ic_baseline_flutter_dash_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_user_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_edit_24" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_user_text_input_layout_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_user_text_input_layout_dob_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_user_text_input_layout_username"
        app:startIconDrawable="@drawable/ic_baseline_cake_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_user_edit_text_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_date_range_24"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_user_text_input_layout_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_user_text_input_layout_bio_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_user_text_input_layout_dob"
        app:startIconDrawable="@drawable/ic_baseline_smart_toy_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_user_edit_text_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_edit_24" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/activity_user_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_user_button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/activity_user_button_save_text_save"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>