<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_group_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        app:strokeColor="@color/cardview_shadow_start_color"
        app:strokeWidth="4dp">

        <ImageView
            android:id="@+id/fragment_group_image_view_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_group_24" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_group_button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintLeft_toRightOf="@id/fragment_group_card_view"
        app:layout_constraintTop_toTopOf="@id/fragment_group_card_view"
        app:tint="@color/design_default_color_on_primary" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragment_group_button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_image_24"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@id/fragment_group_card_view"
        app:layout_constraintLeft_toRightOf="@id/fragment_group_card_view"
        app:tint="@color/design_default_color_on_primary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_group_text_input_layout_group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_group_text_input_layout_group_name_hint"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_group_card_view"
        app:startIconDrawable="@drawable/ic_baseline_flutter_dash_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_group_edit_text_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_edit_24" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_group_text_input_layout_members"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/activity_group_text_view_members"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_group_text_input_layout_group_name"
        app:startIconDrawable="@drawable/ic_baseline_group_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_group_edit_text_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_group_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/fragment_group_button_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_group_text_input_layout_members" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_group_button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/activity_group_button_save_text"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/fragment_group_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>